css/main.css
/* ... */
.academic-papers-header-section form{
	margin-bottom: 20px;
}

.academic-papers-header-section button:hover{
	background: #5A67D8;
	color: #FFFFFF;
	border: 0px solid #5A67D8;
    text-decoration: none;
}

.active-sort-button option {
	background: #FFFFFF;
	color: #4A5568;
	font-weight: 400;
	border: 0px solid #4A5568;
}

 .active-sort-button {
	background: #5A67D8 !important;
	color: #FFFFFF !important;
	font-weight: bold !important;
	border: 0px solid #5A67D8 !important;
}

.academic-papers-header-section button:active{
	background: #5A67D8 !important;
	color: #FFFFFF;
	border: 0px solid #5A67D8;
}

.academic-papers-body-section{
	width: 100%;
}

.academic-papers-header-section select{
	min-width: 10rem;
	padding: 8px 20px;
	margin-right: 20px;
	margin-top: 5px;
	background: #FFFFFF;
	box-shadow: 0px 4px 3px rgba(26, 32, 44, 0.04), 0px 0px 2px #E2E8F0;
	border-radius: 4px;
	border: 0px solid white;
	font-family: Roboto;
	font-style: normal;
	font-weight: normal;
	font-size: 16px;
	line-height: 150%;
	color: #4A5568;
	box-shadow: 0px 8px 15px rgba(45, 55, 72, 0.15), 0px 0px 2px rgba(127, 156, 245, 0.16);
	background-image: url("/lecture_website_template/img/expand_more.png");
	background-repeat: no-repeat;
	background-position: right;
}

.academic-papers-header-section option {
	font-family: Roboto;
	font-weight: 400;
	font-size: 1rem;
}

.publications-hr {
	margin-top: 2.5rem;
	margin-bottom: 2.5rem;
	width: 90%;
}

.publication-details {
	display: flex;
	align-self: flex-end;
}


@media only screen and (max-width: 850px) {

	.academic-papers-container{
		margin-top: 1rem;
	}

  .academic-papers-body-section h3{
	  margin-left: 16px;
  }

	.publications-hr {
		margin-top: 0.5rem;
	}


  .academic-papers-header-section select{
	  width: 100%;
	  margin-left: auto;
	  margin-right: auto;
	  margin-bottom: 10px;
  }
}

/* Edited by Chezi Imany  - added classes (academic-papers-header-section h1) and (content p)*/
@media only screen and (max-width: 400px){

	.academic-papers-header-section h1{
		font-size: 24px;
		display: flex;
		align-self: center;
		text-align: center;
	}

	.content p{
		text-align: center;
	}

	.academic-papers-panel {
		margin-left: 0px;
		margin-right: 0px;
	}

	.teaching-papers-body-section {
		margin-left: 0px !important;
	}


	.publications-order-by-icon {
		display: inline;
		height: 14px;
		margin-right: 13px;
		color: #667EEA;
	}

	.publications-order-by-btn {
		pointer-events: auto;
		color: #667EEA;
	}

	.publications-filter-btn {
		pointer-events: auto;
		color: #667EEA;
	}

	.publications-filter-icon {
		display: inline;
		height: 10px;
		margin-right: 13px;
		margin-top: 2px;
	}


	#reset-btn {
	  font-size: 14px;
	  margin: 12px 10px;
	  text-align: left;
	}

}


/* end - publications page */

/* search page */

.search-label{
	font-family: Roboto;
    background: #F2F2F2;
    border-radius: 4px;
    padding: 6px 18px;
    color: #828282;
    font-weight: 500;
    font-size: 14px;
    line-height: 150%;
    margin-right: 0.5rem;
}

.search-date{
	font-size: 14px !important;
	margin-bottom: 10px;
}


@media only screen and (max-width: 400px)
{

	.search-card-margin-fix{
		margin-top: 20px !important;
		width: 100%;
		margin-left: 0px !important;
	}
}

/* end - search page */

/* start  - teaching page*/


.teaching-papers-header-section{
    display: flex;
    flex-flow: column;
	width: 100%;
	padding-left: 16px;
	padding-right: 16px;
}

.teaching-body-filter form{
	margin-bottom: 20px;
}

.teaching-papers-header-section hr{
	border: 1px solid #E2E8F0;
}

.teaching-papers-header-section h1{
	font-family: Playfair Display;
	font-size: 48px;
	line-height: 64px;
	text-transform: capitalize;
}

.search-pre-header{
	font-family: Playfair Display;
	font-size: 24px;
	line-height: 10px;
}

.teaching-papers-body-section{
	padding-bottom: 50px;
	width: 100%;
	padding-left: 0px;
    padding-right: 0px;
}

.teaching-papers-body-section h3{
	font-family: Playfair Display;
	font-weight: bold;
	font-size: 24px;
	line-height: 32px;
	letter-spacing: 0.04em;
	padding-bottom: 8px;
	color: #1A202C;
}

.teaching-papers-body-section p{
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  font-size: 20px;
  line-height: 150%;
  color: #1A202C;
  padding-bottom: 0;
}

.teaching-papers-body-section .semester{
  font-size: 16px;
  line-height: 135%;
  color: #A0AEC0;
  margin-bottom: 4px;
}

.teaching-container{
	max-width: 830px;
	margin-left: auto;
	margin-right: auto;
	padding-top: 20px;
	width: 100%;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	margin-top: 5rem;
}

.teaching-body-filter button{
	padding: 8px 20px;
	margin-right: 20px;
	margin-top: 5px;
	background: #FFFFFF;
	box-shadow: 0px 4px 3px rgba(26, 32, 44, 0.04), 0px 0px 2px #E2E8F0;
	border-radius: 4px;
	border: 0px solid white;
	font-family: Roboto;
	font-style: normal;
	font-weight: normal;
	font-size: 16px;
	line-height: 150%;
	color: #4A5568;
}

.teaching-body-filter button:hover{
	background: #5A67D8 !important;
	color: #FFFFFF;
	border: 0px solid #5A67D8;
    text-decoration: none !important;
}

.active-filter-button{
	background: #5A67D8 !important;
	color: #FFFFFF !important;
	font-weight: bold !important;
	border: 0px solid #5A67D8;
}

.teaching-body-filter button:active{
	background: #5A67D8 !important;
	color: #FFFFFF;
	border: 0px solid #5A67D8;
}


@media only screen and (max-width: 420px){
	.teaching-body-filter button {
		white-space: normal
	}

	.teaching-papers-header-section hr{
		visibility: hidden;
	}
}
/* ... */

